--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greentechsee</title>
+    <script>
+      window.serverConfig.apiUrl = '__API_URL__';
+    </script>
   </head>
   <body>
     <div id="root"></div>
