--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greentechsee</title>
     <script>
-      window.serverConfig.apiUrl = '__API_URL__';
+      window.serverConfig = {
+        apiUrl: "__API_URL__",
+      };
     </script>
   </head>
   <body>
